# magog

./: .build.sh  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING  CREDITS  Cargo.toml  DEVELOP.md  Doxyfile.in  LICENSE  LICENSE-MIT  Makefile  README  README.md  Tupfile  Tuprules.tup  build-release.sh  build.rs  clean.sh  cross_compiliation.text  default.nix  design.txt  init-submodules.sh  premake4.lua  release.sh  rust-rule.sh  rustc_version.txt  rustfmt.toml  shell.nix  sprint.ron  sprint.toml  todo.txt  util.hpp  winlink.bat  xev.hpp
backend/: Cargo.toml
backend/src/: blit.frag  blit.vert  canvas.rs  canvas_util.rs  event.rs  fonter.rs  key.rs  lib.rs  renderer.rs  scancode_linux.rs  scancode_macos.rs  sprite.frag  sprite.vert
calx/: .build.sh  Cargo.toml  LICENSE  README  symlink-git-hooks.sh
calx-alg/: Cargo.toml
calx-alg/src/: ease.rs  lib.rs  parser.rs  rng.rs  search.rs  text.rs  timing.rs
calx-alg/tests/: lib.rs
calx-cache/: Cargo.toml
calx-cache/src/: atlas.rs  brush.rs  font.rs  img.rs  index_cache.rs  lib.rs
calx-draw/: Cargo.toml
calx-draw/examples/: demo.rs
calx-draw/src/: canvas.rs  draw_util.rs  lib.rs  mesh.rs  mesh_context.rs  sprite.vert
calx-ecs/: Cargo.toml
calx-ecs/benches/: parallel.rs  pos_vel.rs
calx-ecs/src/: lib.rs
calx-ecs/tests/: lib.rs
calx-resource/: Cargo.toml
calx-resource/src/: lib.rs
calx-room/: Cargo.toml
calx-room/examples/: voxel.rs
calx-room/src/: lib.rs
calx-wall/: Cargo.toml
calx-wall/examples/: demo.rs
calx-wall/src/: draw_util.rs  font.rs  fonter.rs  lib.rs  mesh.rs  wall.rs
calx-window/: Cargo.toml
calx-window/examples/: voxel.rs
calx-window/src/: blit.frag  event.rs  event_translator.rs  lib.rs  scancode_linux.rs  scancode_macos.rs  scancode_windows.rs  window.rs
calx/examples/: term-gradient.rs
calx/git-hooks/: pre-push
calx/src/: alg_misc.rs  asciimap.rs  canvas.rs  cell.rs  color.rs  colors.rs  debug.rs  deprecated_space.rs  ease.rs  engine.rs  event.rs  flick.rs  fov.rs  hex.rs  hex_fov.rs  incremental.rs  legend_builder.rs  lib.rs  pack_rect.rs  parser.rs  prefab.rs  project.rs  rectutil.rs  rng.rs  scancode_windows.rs  search.rs  space.rs  stego.rs  system.rs  text.rs  tile.rs  tiled.rs  timing.rs  vorud.rs  world.rs
calx/tests/: lib.rs
calx/tools/: dump_linear_rgb_values.py
content/: Cargo.toml
content/old-src/: brush.rs  geomorph.rs  herringbone.rs  lib.rs  rooms.rs  terrain.rs
content/src/: brush.rs  geomorph.rs  herringbone.rs  init.rs  lib.rs  mapgen.rs  rooms.rs  terrain.rs
display/: Cargo.toml
display/src/: atlas_cache.rs  backend.rs  brush.rs  cache.rs  canvas.rs  canvas_ext.rs  canvas_zoom.rs  console.rs  draw_util.rs  init.rs  lib.rs  render.rs  sprite.rs  tilesheet.rs  view.rs
hexworld/: Cargo.toml
hexworld/assets/: hexworld.tmx
hexworld/src/: brush.rs  cmd.rs  globals.rs  main.rs  path.rs  render.rs  rule.rs  spr.rs  world.rs
mapgen/: Cargo.toml
mapgen/src/: geomorph.rs  herringbone.rs  lib.rs  mapgen.rs  rooms.rs
outline/: Cargo.toml
outline/src/: de.rs  lib.rs  outline.rs  ser.rs  symbol.rs  tests.rs  util.rs
render/: Cargo.toml
render/src/: lib.rs  render_terrain.rs
tools/: CMakeLists.txt  bake-data.cpp  bake.h  build-atlas.cpp  databake.py  dump_linear_rgb_values.py  emit-chardata.cpp  fontbake.c  load_fonts.cpp  render-font.cpp  tools.cmake
util/: Cargo.toml  alg.hpp  audio.cpp  audio.hpp  axis_box.hpp  box.hpp  color.cpp  color.hpp  core.cpp  core.hpp  debug.hpp  font.cpp  font.hpp  fonter_system.cpp  fonter_system.hpp  format.cpp  format.hpp  game_loop.cpp  game_loop.hpp  game_state.hpp  geom_util.cpp  geom_util.hpp  gl_texture.cpp  gl_texture.hpp  gldraw.cpp  gldraw.hpp  hex.cpp  hex.hpp  imgui.cpp  imgui.hpp  imgui_system.cpp  mixer.cpp  mixer.hpp  mtx.hpp  num.cpp  num.hpp  sdl_util.cpp  sdl_util.hpp  shader.cpp  shader.hpp  (+10 more)
util/src/: atlas.rs  dijkstra.rs  geom.rs  img.rs  lib.rs  rgb.rs  text.rs  timing.rs  util.rs  vorud.rs
util/tests/: test_vec.cpp
vitral/: Cargo.toml
vitral-atlas/: Cargo.toml  README.md
vitral-atlas/src/: lib.rs
vitral-glium/: Cargo.toml
vitral-glium/src/: canvas.rs  canvas_zoom.rs  lib.rs
vitral/examples/: demo.rs  glium.rs
vitral/src/: atlas.rs  atlas_cache.rs  backend.rs  blit.frag  blit.frag.spv  blit.vert  blit.vert.spv  canvas_zoom.rs  colors.rs  flick.rs  game_loop.rs  glium_backend.rs  keycode.rs  lib.rs  rect_util.rs  scene.rs  sprite.frag  sprite.frag.spv  sprite.vert  sprite.vert.spv  state.rs  tilesheet.rs
world/: Cargo.toml  action_system.cpp  action_system.hpp  actor.cpp  actor.hpp  cavegen.cpp  cavegen.hpp  cycler_system.cpp  effects.hpp  entities_system.cpp  entities_system.hpp  entity.cpp  entity.hpp  factory_system.cpp  factory_system.hpp  footprint.hpp  fov.cpp  fov.hpp  fov_system.cpp  fov_system.hpp  fx_system.hpp  location.cpp  location.hpp  mapgen_system.cpp  mapgen_system.hpp  parts.hpp  rules.cpp  rules.hpp  spatial_index.hpp  spatial_system.cpp  spatial_system.hpp  terrain.cpp  terrain.hpp  terrain_system.cpp  terrain_system.hpp  view_space.cpp  view_space.hpp  world.cpp  world.hpp
world/old_src/: lib.rs  mapgen.rs  system.rs  world.rs
world/src/: ability.rs  action.rs  ai.rs  animations.rs  area.rs  biome.rs  brush.rs  chart.rs  command.rs  comp.rs  component_ref.rs  components.rs  desc.rs  dijkstra.rs  dir6.rs  ecs.rs  effect.rs  egg.rs  entity.rs  event.rs  extract.rs  field.rs  flags.rs  form.rs  fov.rs  geom.rs  geomorph.rs  geomorph_data.rs  grammar.rs  init.rs  item.rs  lib.rs  location.rs  location_set.rs  map.rs  map_memory.rs  mapfile.rs  mapgen.rs  mapsave.rs  mob.rs  (+22 more)
xev/: CMakeLists.txt  alg.hpp  axis_box.hpp  color.cpp  color.hpp  font.cpp  font.hpp  game_loop.cpp  game_loop.hpp  game_state.hpp  geom_util.cpp  geom_util.hpp  gldraw.cpp  gldraw.hpp  hex.cpp  hex.hpp  imgui.cpp  imgui.hpp  mtx.hpp  num.cpp  num.hpp  shader.cpp  shader.hpp  static_file.cpp  static_file.hpp  surface.cpp  surface.hpp  transform.cpp  transform.hpp  util.cpp  util.hpp  vec.hpp  wavefront.cpp  wavefront.hpp  winmain.hpp
xev/tests/: test_vec.cpp
(+458 files in other folders)
