[package]
name = "magog"
version = "0.1.0"
authors = [ "Risto Saarelma <risto.saarelma@iki.fi>" ]
description = "Roguelike game"
keywords = ["gamedev"]
license = "GPL3"
edition = "2018"

[workspace]
members = ["world", "display", "calx", "calx-ecs", "vitral"]

[dependencies]
calx = { path = "calx" }
calx-ecs = { path = "calx-ecs" }
display = { path = "display" }
env_logger = "0.7"
euclid = "0.20"
image = "0.23"
lazy_static = "1.2"
log = "0.4"
rand = { version = "0.7", features = ["serde1"] }
ron = "0.5"
serde = "1"
structopt = "0.3"
time = "0.1"
vitral = { path = "vitral" }
world = { path = "world" }

[dev-dependencies]
image = "0.23"
serde_json = "1"
noise = { version = "0.6", default-features = false }

# Make linking debug binaries faster by not including debug information.
[profile.dev]
debug = 0
