[package]

name = "backend"
version = "0.0.0"
authors = [ "rsaarelm <risto.saarelma@iki.fi>" ]

[lib]
name = "backend"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.glutin]
git = "https://github.com/tomaka/glutin"

[dependencies.glium]
git = "https://github.com/tomaka/glium"

[[example]]
name = "demo"
path = "examples/demo/main.rs"
