[package]

name = "calx_backend"
version = "0.0.1"
authors = [ "rsaarelm <risto.saarelma@iki.fi>" ]

[lib]
name = "calx_backend"

[dependencies.time]

[dependencies.image]

[dependencies.glutin]

[dependencies.glium]
git = "https://github.com/tomaka/glium"

[dependencies.glium_macros]
git = "https://github.com/tomaka/glium"

[dependencies.calx_util]
path = "../"

[[example]]
name = "demo"
path = "examples/demo.rs"
