[package]
name = "calx-alg"
version = "0.3.0-alpha"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Game development helper algorithm grab bag"
keywords = ["gamedev"]
license = "MIT OR Apache-2.0"

[dependencies]
rustc-serialize = "0.3"
num = "0.1"
rand = "0.3"
time = "0.1"
vec_map = "0.6"

[dev-dependencies]
bincode = "0.6"
