[package]
name = "calx-alg"
version = "0.3.0-alpha"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Game development helper algorithm grab bag"
keywords = ["gamedev"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = "1.0"
num = "0.1"
rand = "0.3"
time = "0.1"
vec_map = "0.8"

[dev-dependencies]
serde_json = "1.0"
