[package]
name = "calx-cache"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Resource caching for games"
keywords = ["gamedev"]
license = "MIT OR Apache-2.0"

[dependencies]
image = "0.9"
vec_map = "0.6"
num = "0.1"

[dependencies.calx-layout]
path = "../calx-layout"

[dependencies.calx-color]
path = "../calx-color"
