[package]
name = "calx-ecs"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Serializable entity component system for games"
keywords = ["gamedev", "ecs"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = "0.8"
serde_macros = "0.8"

[dev-dependencies]
bincode = "0.6"
