[package]
name = "calx-ecs"
version = "0.7.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Serializable entity component system for games"
keywords = ["gamedev", "ecs"]
repository = "https://github.com/rsaarelm/calx-ecs"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
