[package]
name = "calx-resource"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Smart pointer for static resources"
keywords = ["gamedev"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = "0.8"
# TODO: Switch to stdlib BTreeMap once range API is stable.
stable_bst = "0.2"
compare = "0.0"
