[package]
name = "calx-room"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "3D drawing utilities"
keywords = ["gamedev"]
license = "MIT OR Apache-2.0"

[dependencies]
cgmath = "0.8"
glium = "0.14"

[dependencies.calx-alg]
path = "../calx-alg"

[dependencies.calx-window]
path = "../calx-window"

[dependencies.calx-color]
path = "../calx-color"

[dev-dependencies]
noise = "0.2"
rand = "0.3"

[dev-dependencies.calx-system]
path = "../calx-system"
