[package]
name = "calx-wall"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "2D drawing utilities"
keywords = ["gamedev"]
license = "MIT OR Apache-2.0"

[dependencies]
cgmath = "0.7"
glium = "0.13"
image = "0.6"

[dependencies.calx-alg]
path = "../calx-alg"

[dependencies.calx-window]
path = "../calx-window"

[dependencies.calx-color]
path = "../calx-color"

[dependencies.calx-layout]
path = "../calx-layout"

[dependencies.calx-cache]
path = "../calx-cache"

[dev-dependencies.calx-system]
path = "../calx-system"
