[package]
name = "calx-window"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "OpenGL based graphics window, input reading and game loop"
keywords = ["gamedev"]
license = "MIT OR Apache-2.0"

[dependencies]
time = "0.1"
glium = "0.14"
image = "0.10"

[dependencies.calx-alg]
path = "../calx-alg"

[dependencies.calx-layout]
path = "../calx-layout"

[dependencies.calx-color]
path = "../calx-color"

[dev-dependencies.calx-system]
path = "../calx-system"

[dev-dependencies.calx-color]
path = "../calx-color"

[dev-dependencies]
cgmath = "0.8"
collision = "0.6"
