[package]

name = "calx"
version = "0.0.1"
authors = [ "risto.saarelma@iki.fi" ]
build = "./.build.sh"

[[lib]]

name = "calx"
path = "src/lib.rs"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs"

[dependencies.hgl]
git = "https://github.com/cmr/hgl-rs"

