[package]
name = "calx"
version = "0.3.0-alpha"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Game programming utilities"
keywords = ["gamedev"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
euclid = "0.20"
image = "0.21"
num = "0.2"
rand = "0.7"
rand_xorshift = { version = "0.2", features = ["serde1"] }
serde = "1.0"
serde_derive = "1.0"
tempdir = "0.3"
time = "0.1"
vec_map = "0.8"
vitral = { path = "../vitral" }

[dev-dependencies]
serde_json = "1.0"
term = "0.5"
