[package]
name = "calx"
version = "0.3.0-alpha"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Game programming utilities"
keywords = ["gamedev"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
byteorder = "1"
crc32fast = "1"
euclid = "0.22"
image = "0.23"
libflate = "1"
log = "0.4"
num = "0.4"
rand = { version = "0.8", features = ["serde1"] }
rand_xorshift = { version = "0.3", features = ["serde1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempdir = "0.3"
time = "0.3"
vec_map = "0.8"
vitral = { path = "../vitral" }

[dev-dependencies]
serde_json = "1"
term = "0.7"
