[package]

name = "content"
version = "0.0.1"
authors = [ "risto.saarelma@iki.fi" ]

[lib]
name = "content"

[dependencies]
rand = "*"
num = "*"
image = "*"
serde = "*"
serde_macros = "*"

[dependencies.calx-alg]
git = "https://github.com/rsaarelm/calx"

[dependencies.calx-layout]
git = "https://github.com/rsaarelm/calx"

[dependencies.calx-grid]
git = "https://github.com/rsaarelm/calx"

[dependencies.calx-cache]
git = "https://github.com/rsaarelm/calx"
