[package]

name = "content"
version = "0.1.0"
authors = [ "risto.saarelma@iki.fi" ]

[lib]
name = "content"

[dependencies]
glium = "0.15"
rand = "0.3"

[dependencies.calx-color]
git = "https://github.com/rsaarelm/calx"

[dependencies.calx-resource]
git = "https://github.com/rsaarelm/calx"

[dependencies.calx-grid]
git = "https://github.com/rsaarelm/calx"

[dependencies.world]
path = "../world"

[dependencies.display]
path = "../display"
