[package]
name = "display"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]

[lib]
name = "display"

[dependencies]
calx = { git = "https://github.com/rsaarelm/calx" }
calx-ecs = "0.6"
euclid = "0.18"
glium = "0.21"
image = "0.19"
time = "0.1"
vec_map = "0.8"
vitral = { git = "https://github.com/rsaarelm/vitral", features = ["glium_backend"] }
world = { path = "../world" }
