[package]
name = "display"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
edition = "2018"

[lib]
name = "display"

[dependencies]
calx = { path = "../calx" }
calx-ecs = { path = "../calx-ecs" }
euclid = "0.19"
glium = "0.22"
image = "0.20"
time = "0.1"
vec_map = "0.8"
vitral = { path = "../vitral" }
world = { path = "../world" }
