[package]
name = "hexworld"
version = "0.0.1"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Calx demo"
keywords = ["gamedev"]
license = "MIT"

[[bin]]
name = "hexworld"

[dependencies.calx]
path = ".."

[dependencies.calx_ecs]
path = ".."

[dependencies.rustc-serialize]

[dependencies.image]

[dependencies.tiled]

[dependencies.num]
