[package]

name = "mapgen"
version = "0.0.1"
authors = [ "risto.saarelma@iki.fi" ]

[lib]
name = "mapgen"

[dependencies.rand]
[dependencies.num]
[dependencies.rustc-serialize]

[dependencies.calx]
git = "https://github.com/rsaarelm/calx"

[dependencies.calx_macros]
git = "https://github.com/rsaarelm/calx"
