[package]

name = "render"
version = "0.0.1"
authors = [ "risto.saarelma@iki.fi" ]

[lib]
name = "render"

[dependencies]
cgmath = "0.7"

[dependencies.calx-color]
git = "https://github.com/rsaarelm/calx"

[dependencies.calx-layout]
git = "https://github.com/rsaarelm/calx"

[dependencies.calx-grid]
git = "https://github.com/rsaarelm/calx"

[dependencies.content]
path = "../content"
