[package]

name = "calx_util"
version = "0.0.1"
authors = [ "rsaarelm <risto.saarelma@iki.fi>" ]

[lib]
name = "calx_util"

[dependencies.time]

[dependencies.rand]

[dependencies.regex_macros]

[dependencies.regex]

[dependencies.rustc-serialize]

[dependencies.image]
git = "https://github.com/PistonDevelopers/image"
