[package]
name = "vitral"
version = "0.2.0-pre"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Platform-agnostic immediate mode GUI"
keywords = ["gui", "vitral"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rsaarelm/vitral"
edition = "2018"

[dependencies]
bytemuck = "1"
cfg-if = "0.1"
euclid = "0.20"
futures = "0.3"
image = "0.23"
lazy_static = "1.2"
log = "0.4"
serde = "1"
serde_derive = "1"
time = "0.1"
wgpu = { version = "0.5", features = ["vulkan"] }
winit = "0.22"

[dev-dependencies]
env_logger = "0.7"
rand = "0.7"
