[package]
name = "vitral"
version = "0.2.0-pre"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Platform-agnostic immediate mode GUI"
keywords = ["gui", "vitral"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rsaarelm/vitral"
edition = "2018"

[dependencies]
bytemuck = "1"
cfg-if = "1"
euclid = "0.22"
futures = "0.3"
image = "0.23"
lazy_static = "1.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
time = "0.3"
wgpu = "0.8"
winit = "0.25"

[dev-dependencies]
env_logger = "0.8"
rand = { version = "0.8", features = ["serde1"] }
