[package]
name = "world"
version = "0.1.0"
authors = [ "risto.saarelma@iki.fi" ]
edition = "2018"

[lib]
name = "world"

[dependencies]
calx = { path = "../calx" }
calx-ecs = { path = "../calx-ecs" }
euclid = "0.20"
image = "0.23"
indexmap = "1"
lazy_static = "1"
log = "0.4"
noise = { version = "0.6", default-features = false }
outline = { path = "../outline" }
rand = "0.7"
rand_xorshift = { version = "0.2", features = ["serde1"] }
ron = "0.5"
serde = "1"
serde_derive = "1"
serde_plain = "0.3"
vec_map = "0.8"
vitral = { path = "../vitral" }
